--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -71,66 +71,62 @@
             <section class="klesvalg">
 
 
+              <section class="dropned">
+                <button class="dropknapp"><a href="klær.html">Klær</a>
+                </button>
+                <section class="dropned-content">
+                  <a href="klær.html">Gensere</a>
+                  <a href="klær.html">Bukser</a>
+                  <a href="klær.html">Jakker</a>
+                </section>
+              </section>
+
 
               <section class="dropned">
-
-              <button class="dropknapp"><a href="herre.html">Klær</a>
-
-            </button>
-                <section class="dropned-content">
-                  <a href="herre.html">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
-
-
-            <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Sko</a>
+                <button class="dropknapp"><a href="../herre.html">Sko</a>
 
                 </button>
                 <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
+                  <a href="sko.html">Boots</a>
+                  <a href="sko.html">Tøfler</a>
+                  <a href="sko.html">Mokasiner</a>
                 </section>
-                </section>
+              </section>
 
 
 
-        <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Sport</a>
+              <section class="dropned">
+                <button class="dropknapp"><a href="../herre.html">Sport</a>
                 </button>
                 <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
+                  <a href="sport.html">t-skjorte</a>
+                  <a href="sport.html">Bukse</a>
+                  <a href="sport.html">sko</a>
                 </section>
-                </section>
+              </section>
 
 
 
-        <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Accesories</a>
+              <section class="dropned">
+                <button class="dropknapp"><a href="../herre.html">Accesories</a>
                 </button>
                 <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
+                  <a href="accesories.html">Klokker</a>
+                  <a href="accesories.html">Slips</a>
+                  <a href="accesories.html">Belter</a>
                 </section>
-                </section>
+              </section>
 
 
-        <section class="dropned">
-              <button class="dropknapp"><a href="herre.html">Salg</a>
+              <section class="dropned">
+                <button class="dropknapp"><a href="herre.html">Salg</a>
                 </button>
                 <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
+                  <a href="Salg.html">Gensere</a>
+                  <a href="Salg.html">Bukser</a>
+                  <a href="Salg.html">Jakker</a>
                 </section>
-                </section>
-
+              </section>
 
               </section>
 
@@ -197,35 +193,59 @@
         <section class=" nr3">
           <a href="a HERRE/herre.html"></a>
           <a href="a Herre/herre.html"><img src="bilder/herremod3.psd" alt="" class="bilde3"></a>
+
         </section>
+  </section>
 
     </section>
 
-    </section>
+<section class="velge_herre_klær">
+
+<section class="klæ_herre alle_4">
+<a href="klær.html"><img src="bilder/klesplagg_it.psd" alt=""> </a>
+</section>
+
+
+<section class="sko_herre alle_4">
+<a href="sko.html"><img src="bilder/sko_it.psd" alt=""> </a>
+</section>
+
+<section class="Accesories alle_4">
+<a href="accesories.html"><img src="bilder/klokkerr.psd" alt=""> </a>
+</section>
+
+<section class="Sport_herre alle_4">
+<a href="sport.html"><img src="bilder/sport_it.psd" alt=""> </a>
+</section>
+
+</section>
+
+
+
         <section class="brands">
 
         <section class="Louis">
-        <a href="#"><img src="bilder/Louis.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/Louis.psd" alt=""> </a>
         </section>
 
         <section class="versace">
-        <a href=""><img src="bilder/versace.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/versace.psd" alt=""> </a>
         </section>
 
         <section class="Gucci">
-        <a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/Gucci.psd" alt=""> </a>
         </section>
 
         <section class="off_white">
-        <a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/off_white.psd" alt=""> </a>
         </section>
 
         <section class="Supreme">
-        <a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/Supreme.psd" alt=""> </a>
         </section>
 
         <section class="Balenciaga">
-        <a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
+        <a href="klær.html"><img src="bilder/Balenciaga.psd" alt=""> </a>
         </section>
 
         </section>
@@ -236,8 +256,8 @@
 
 
   <section class="reklame2">
-
-    </section>
+    <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+  </section>
 
   <footer>
 
