--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -74,14 +74,12 @@
 
 
         <section class="dropned">
-
-          <button class="dropknapp"><a href="herre.html">Klær</a>
-
+          <button class="dropknapp"><a href="klær.html">Klær</a>
           </button>
           <section class="dropned-content">
-            <a href="herre.html">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
+            <a href="klær.html">Gensere</a>
+            <a href="klær.html">Bukser</a>
+            <a href="klær.html">Jakker</a>
           </section>
         </section>
 
@@ -91,9 +89,9 @@
 
           </button>
           <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
+            <a href="sko.html">Boots</a>
+            <a href="sko.html">Tøfler</a>
+            <a href="sko.html">Mokasiner</a>
           </section>
         </section>
 
@@ -103,9 +101,9 @@
           <button class="dropknapp"><a href="../herre.html">Sport</a>
           </button>
           <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
+            <a href="sport.html">t-skjorte</a>
+            <a href="sport.html">Bukse</a>
+            <a href="sport.html">sko</a>
           </section>
         </section>
 
@@ -115,9 +113,9 @@
           <button class="dropknapp"><a href="../herre.html">Accesories</a>
           </button>
           <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
+            <a href="accesories.html">Klokker</a>
+            <a href="accesories.html">Slips</a>
+            <a href="accesories.html">Belter</a>
           </section>
         </section>
 
@@ -126,9 +124,9 @@
           <button class="dropknapp"><a href="herre.html">Salg</a>
           </button>
           <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
+            <a href="Salg.html">Gensere</a>
+            <a href="Salg.html">Bukser</a>
+            <a href="Salg.html">Jakker</a>
           </section>
         </section>
 
@@ -362,7 +360,7 @@
   <footer>
 
     <section class="reklame2">
-      <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt=""></a>
+      <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
     </section>
 
 
