--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
@@ -2,9 +2,20 @@
 <html lang="nb" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>kl</title>
+    <title>logg inn</title>
+        <link rel="stylesheet" href="main.css">
   </head>
   <body>
-<h3>dfs</h3>
+
+
+<section class="logginn_side">
+
+
+<label>Brukernavn:</label>
+<input type="text" name="navn" required placeholder="Brukernavn">
+<br>
+<label>Passord:</label>
+<input type="password" name="Singh" value="Karan"></input>
+</section>
   </body>
 </html>
