--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/ønskeliste.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/ønskeliste.html
@@ -2,9 +2,20 @@
 <html lang="nb" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>k</title>
+    <title>Ønskeliste</title>
+    <link rel="stylesheet" href="main.css">
   </head>
-  <body>
-<h1>dfbgfd</h1>
+  <body class="loggg">
+
+
+<h3>Logg inn før du kan gå inn på ønskelisten din</h3>
+<label>Brukernavn:</label>
+<input type="text" name="navn" required placeholder="Brukernavn"></input>
+<br>
+<label>Passord:</label>
+<input type="password" name="Singh" value="Karan"></input>
+
+
+
   </body>
 </html>
