--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/klær.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/klær.html
@@ -72,71 +72,68 @@
 
 
 
-            <section class="klesvalg">
-
-
-
-              <section class="dropned">
-
-              <button class="dropknapp"><a href="herre.html">Klær</a>
-
-            </button>
-                <section class="dropned-content">
-                  <a href="herre.html">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
-
-
-            <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Sko</a>
-
-                </button>
-                <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
+      <section class="klesvalg">
 
 
 
         <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Sport</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
+          <button class="dropknapp"><a href="klær.html">Klær</a>
+          </button>
+          <section class="dropned-content">
+            <a href="klær.html">Gensere</a>
+            <a href="klær.html">Bukser</a>
+            <a href="klær.html">Jakker</a>
+          </section>
+        </section>
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="../herre.html">Sko</a>
+
+          </button>
+          <section class="dropned-content">
+            <a href="sko.html">Boots</a>
+            <a href="sko.html">Tøfler</a>
+            <a href="sko.html">Mokasiner</a>
+          </section>
+        </section>
 
 
 
         <section class="dropned">
-              <button class="dropknapp"><a href="../herre.html">Accesories</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
+          <button class="dropknapp"><a href="../herre.html">Sport</a>
+          </button>
+          <section class="dropned-content">
+            <a href="sport.html">t-skjorte</a>
+            <a href="sport.html">Bukse</a>
+            <a href="sport.html">sko</a>
+          </section>
+        </section>
+
 
 
         <section class="dropned">
-              <button class="dropknapp"><a href="herre.html">Salg</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="#">Gensere</a>
-                  <a href="#">Bukser</a>
-                  <a href="#">Jakker</a>
-                </section>
-                </section>
+          <button class="dropknapp"><a href="../herre.html">Accesories</a>
+          </button>
+          <section class="dropned-content">
+            <a href="accesories.html">Klokker</a>
+            <a href="accesories.html">Slips</a>
+            <a href="accesories.html">Belter</a>
+          </section>
+        </section>
 
 
-              </section>
+        <section class="dropned">
+          <button class="dropknapp"><a href="herre.html">Salg</a>
+          </button>
+          <section class="dropned-content">
+            <a href="Salg.html">Gensere</a>
+            <a href="Salg.html">Bukser</a>
+            <a href="Salg.html">Jakker</a>
+          </section>
+        </section>
+
+      </section>
 
 
       <section class="denusynlig">
@@ -150,193 +147,152 @@
     </nav>
 
 
-    <section class="reklame1">
+    <section class="reklame2">
+      <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+    </section>
 
+
+<h1 class="h1_over">Herre klær</h1>
+
+    <div class="valg_klær1">
+
+
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value=""> Størrelse </option>
+          <option value="brus">xxs</option>
+          <option value="juice">xs</option>
+          <option value="vann">s</option>
+          <option value="vann">m</option>
+          <option value="vann">L</option>
+          <option value="vann">XL</option>
+          <option value="vann">XXL</option>
+        </select>
+      </section>
+
+
+
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value="">Pris </option>
+          <option value="brus">0-100</option>
+          <option value="juice">100-500</option>
+          <option value="vann">500-1000</option>
+          <option value="vann">1000-10 000</option>
+          <option value="vann">10 000-100 000</option>
+          <option value="vann">100 000-1 000 000</option>
+        </select>
     </section>
 
 
 
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value="">Farge</option>
+          <option value="brus">Rød</option>
+          <option value="juice">Hvit</option>
+          <option value="vann">Svart</option>
+          <option value="brus">Blå</option>
+        </select>
+          </section>
 
 
-      <!--
-
-    <section class="valg_klær">
-
-      <section class="str">
-
-      <select name="VelgDrikke"required>
-        <option value=""> Størrelse </option>
-        <option value="brus">xxs</option>
-        <option value="juice">xs</option>
-        <option value="vann">s</option>
-        <option value="vann">m</option>
-        <option value="vann">L</option>
-        <option value="vann">XL</option>
-        <option value="vann">XXL</option>
-      </select>
-
-      </section>
-
-
-
-<section class="Pris">
-        <select name="VelgDrikke"required>
-              <option class="str_herre"> Pris </option>
-
-        <option class="str_herre"> Pris </option>
-        <option value="brus">0-100</option>
-        <option value="juice">100-500</option>
-        <option value="vann">500-1000</option>
-        <option value="vann">1000-10 000</option>
-        <option value="vann">10 000-100 000</option>
-        <option value="vann">100 000-1 000 000</option>
-    </select>
-      </section>
-
-      <section class="Farge">
-        <select name="VelgDrikke"required>
-        <option value="">Farge</option>
-        <option value="brus">Rød</option>
-        <option value="juice">Hvit</option>
-        <option value="vann">Svart</option>
-        <option value="brus">Blå</option>
-
-      </select>
-      </section>
-
+          <section class="custom-select" style="width:200px;">
+            <select>
+              <option value="">Merke</option>
+              <option value="brus">Supreme</option>
+              <option value="juice">Gucci</option>
+              <option value="vann">Louis Vuitton</option>
+              <option value="brus">Balenciaga</option>
+            </select>
+              </section>
 
 
       <section class="søkemotorer">
-        <button type="submit" class="knapp2">søk</button>
+        <button type="submit" class="knapp2"><a href="Selve klesplagg/herre_klesplagg1"></a>søk</button>
       </section>
 
-    </section>
 
-        -->
-<section class="valg_klær1">
+</div>
 
 
 
-            <div class="custom-select" style="width:200px;">
-              <select>
-                <option value=""> Størrelse </option>
-                    <option value="brus">xxs</option>
-                    <option value="juice">xs</option>
-                    <option value="vann">s</option>
-                    <option value="vann">m</option>
-                    <option value="vann">L</option>
-                    <option value="vann">XL</option>
-                    <option value="vann">XXL</option>
-              </select>
-            </div>
-
-            <div class="custom-select" style="width:200px;">
-              <select>
-                <option value="">Pris </option>
-                <option value="brus">0-100</option>
-                <option value="juice">100-500</option>
-                <option value="vann">500-1000</option>
-                <option value="vann">1000-10 000</option>
-                <option value="vann">10 000-100 000</option>
-                <option value="vann">100 000-1 000 000</option>
-              </select>
-            </div>
-
-            <div class="custom-select" style="width:200px;">
-              <select>
-
-                <option value="">Farge</option>
-                <option value="brus">Rød</option>
-                <option value="juice">Hvit</option>
-                <option value="vann">Svart</option>
-                <option value="brus">Blå</option>
-              </select>
-            </div>
-
-
-
-
-            <section class="søkemotorer">
-              <button type="submit" class="knapp2"><a href="Selve klesplagg/herre_klesplagg1"></a> søk</button>
-            </section>
-
-
-</section>
-
-<script>
-var x, i, j, selElmnt, a, b, c;
-/*look for any elements with the class "custom-select":*/
-x = document.getElementsByClassName("custom-select");
-for (i = 0; i < x.length; i++) {
-  selElmnt = x[i].getElementsByTagName("select")[0];
-  /*for each element, create a new DIV that will act as the selected item:*/
-  a = document.createElement("DIV");
-  a.setAttribute("class", "select-selected");
-  a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
-  x[i].appendChild(a);
-  /*for each element, create a new DIV that will contain the option list:*/
-  b = document.createElement("DIV");
-  b.setAttribute("class", "select-items select-hide");
-  for (j = 1; j < selElmnt.length; j++) {
-    /*for each option in the original select element,
-    create a new DIV that will act as an option item:*/
-    c = document.createElement("DIV");
-    c.innerHTML = selElmnt.options[j].innerHTML;
-    c.addEventListener("click", function(e) {
-        /*when an item is clicked, update the original select box,
-        and the selected item:*/
-        var y, i, k, s, h;
-        s = this.parentNode.parentNode.getElementsByTagName("select")[0];
-        h = this.parentNode.previousSibling;
-        for (i = 0; i < s.length; i++) {
-          if (s.options[i].innerHTML == this.innerHTML) {
-            s.selectedIndex = i;
-            h.innerHTML = this.innerHTML;
-            y = this.parentNode.getElementsByClassName("same-as-selected");
-            for (k = 0; k < y.length; k++) {
-              y[k].removeAttribute("class");
+    <script>
+      var x, i, j, selElmnt, a, b, c;
+      /*look for any elements with the class "custom-select":*/
+      x = document.getElementsByClassName("custom-select");
+      for (i = 0; i < x.length; i++) {
+        selElmnt = x[i].getElementsByTagName("select")[0];
+        /*for each element, create a new DIV that will act as the selected item:*/
+        a = document.createElement("DIV");
+        a.setAttribute("class", "select-selected");
+        a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+        x[i].appendChild(a);
+        /*for each element, create a new DIV that will contain the option list:*/
+        b = document.createElement("DIV");
+        b.setAttribute("class", "select-items select-hide");
+        for (j = 1; j < selElmnt.length; j++) {
+          /*for each option in the original select element,
+          create a new DIV that will act as an option item:*/
+          c = document.createElement("DIV");
+          c.innerHTML = selElmnt.options[j].innerHTML;
+          c.addEventListener("click", function(e) {
+            /*when an item is clicked, update the original select box,
+            and the selected item:*/
+            var y, i, k, s, h;
+            s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+            h = this.parentNode.previousSibling;
+            for (i = 0; i < s.length; i++) {
+              if (s.options[i].innerHTML == this.innerHTML) {
+                s.selectedIndex = i;
+                h.innerHTML = this.innerHTML;
+                y = this.parentNode.getElementsByClassName("same-as-selected");
+                for (k = 0; k < y.length; k++) {
+                  y[k].removeAttribute("class");
+                }
+                this.setAttribute("class", "same-as-selected");
+                break;
+              }
             }
-            this.setAttribute("class", "same-as-selected");
-            break;
+            h.click();
+          });
+          b.appendChild(c);
+        }
+        x[i].appendChild(b);
+        a.addEventListener("click", function(e) {
+          /*when the select box is clicked, close any other select boxes,
+          and open/close the current select box:*/
+          e.stopPropagation();
+          closeAllSelect(this);
+          this.nextSibling.classList.toggle("select-hide");
+          this.classList.toggle("select-arrow-active");
+        });
+      }
+
+      function closeAllSelect(elmnt) {
+        /*a function that will close all select boxes in the document,
+        except the current select box:*/
+        var x, y, i, arrNo = [];
+        x = document.getElementsByClassName("select-items");
+        y = document.getElementsByClassName("select-selected");
+        for (i = 0; i < y.length; i++) {
+          if (elmnt == y[i]) {
+            arrNo.push(i)
+          } else {
+            y[i].classList.remove("select-arrow-active");
           }
         }
-        h.click();
-    });
-    b.appendChild(c);
-  }
-  x[i].appendChild(b);
-  a.addEventListener("click", function(e) {
-      /*when the select box is clicked, close any other select boxes,
-      and open/close the current select box:*/
-      e.stopPropagation();
-      closeAllSelect(this);
-      this.nextSibling.classList.toggle("select-hide");
-      this.classList.toggle("select-arrow-active");
-  });
-}
-function closeAllSelect(elmnt) {
-  /*a function that will close all select boxes in the document,
-  except the current select box:*/
-  var x, y, i, arrNo = [];
-  x = document.getElementsByClassName("select-items");
-  y = document.getElementsByClassName("select-selected");
-  for (i = 0; i < y.length; i++) {
-    if (elmnt == y[i]) {
-      arrNo.push(i)
-    } else {
-      y[i].classList.remove("select-arrow-active");
-    }
-  }
-  for (i = 0; i < x.length; i++) {
-    if (arrNo.indexOf(i)) {
-      x[i].classList.add("select-hide");
-    }
-  }
-}
-/*if the user clicks anywhere outside the select box,
-then close all select boxes:*/
-document.addEventListener("click", closeAllSelect);
-</script>
+        for (i = 0; i < x.length; i++) {
+          if (arrNo.indexOf(i)) {
+            x[i].classList.add("select-hide");
+          }
+        }
+      }
+      /*if the user clicks anywhere outside the select box,
+      then close all select boxes:*/
+      document.addEventListener("click", closeAllSelect);
+    </script>
+
 
 
     <section class="herre_hoved">
@@ -355,9 +311,7 @@ document.addEventListener("click", closeAllSelect);
           <li><a href="#" class="tabell_ord">Gensere</a></li>
           <li><a href="#" class="tabell_ord">Bukser </a></li>
           <li><a href="#" class="tabell_ord">Undertøy </a></li>
-          <li><a href="#" class="tabell_ord"></a></li>
-          <li><a href="#" class="tabell_ord"> </a></li>
-          <li><a href="#" class="tabell_ord"> </a></li>
+
 
 
         </ul>
@@ -366,17 +320,6 @@ document.addEventListener("click", closeAllSelect);
 
 
       <section class="_index">
-        <div class="bilde"><img src="
-
-
-    bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
-        </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-      </section>
-
-      <section class="_index">
         <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
@@ -385,17 +328,25 @@ document.addEventListener("click", closeAllSelect);
       </section>
 
       <section class="_index">
-        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
+        <div class="navn">strikkegenser
         </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+        <div class="pris"><mark class="nåpris">999 kr </mark> <mark class="førpris">169 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
 
       <section class="_index">
-        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
+        <div class="bilde"><img src="bilder/it dress.jpg" alt=""></div>
+        <div class="Merke">VERSACE </div>
+        <div class="navn"> dress jakke
+        </div>
+        <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
+        <div class="Merke">Napapirji </div>
+        <div class="navn">Utebukse
         </div>
         <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
@@ -413,14 +364,7 @@ document.addEventListener("click", closeAllSelect);
 
 
 
-
-
   <footer>
-
-    <section class="reklame2">
-
-    </section>
-
 
     <section class="hele_footer">
 
