--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -67,68 +67,65 @@
   <main>
 
     <nav class="navigation">
-
-            <section class="klesvalg">
-
-
-              <section class="dropned">
-                <button class="dropknapp"><a href="klær.html">Klær</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="klær.html">Gensere</a>
-                  <a href="klær.html">Bukser</a>
-                  <a href="klær.html">Jakker</a>
-                </section>
-              </section>
-
-
-              <section class="dropned">
-                <button class="dropknapp"><a href="../herre.html">Sko</a>
-
-                </button>
-                <section class="dropned-content">
-                  <a href="sko.html">Boots</a>
-                  <a href="sko.html">Tøfler</a>
-                  <a href="sko.html">Mokasiner</a>
-                </section>
-              </section>
+      <section class="klesvalg">
 
 
 
-              <section class="dropned">
-                <button class="dropknapp"><a href="../herre.html">Sport</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="sport.html">t-skjorte</a>
-                  <a href="sport.html">Bukse</a>
-                  <a href="sport.html">sko</a>
-                </section>
-              </section>
+        <section class="dropned">
+          <button class="dropknapp"><a href="klær.html">Klær</a>
+          </button>
+          <section class="dropned-content">
+            <a href="klær.html">Gensere</a>
+            <a href="klær.html">Bukser</a>
+            <a href="klær.html">Jakker</a>
+          </section>
+        </section>
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="sko.html">Sko</a>
+
+          </button>
+          <section class="dropned-content">
+            <a href="sko.html">Boots</a>
+            <a href="sko.html">Tøfler</a>
+            <a href="sko.html">Mokasiner</a>
+          </section>
+        </section>
 
 
 
-              <section class="dropned">
-                <button class="dropknapp"><a href="../herre.html">Accesories</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="accesories.html">Klokker</a>
-                  <a href="accesories.html">Slips</a>
-                  <a href="accesories.html">Belter</a>
-                </section>
-              </section>
+        <section class="dropned">
+          <button class="dropknapp"><a href="sport.html">Sport</a>
+          </button>
+          <section class="dropned-content">
+            <a href="sport.html">Sport overdeler</a>
+            <a href="sport.html">Sport underdeler</a>
+            <a href="sport.html">Sport relatert</a>
+          </section>
+        </section>
 
 
-              <section class="dropned">
-                <button class="dropknapp"><a href="herre.html">Salg</a>
-                </button>
-                <section class="dropned-content">
-                  <a href="Salg.html">Gensere</a>
-                  <a href="Salg.html">Bukser</a>
-                  <a href="Salg.html">Jakker</a>
-                </section>
-              </section>
 
-              </section>
+        <section class="dropned">
+          <button class="dropknapp"><a href="accesories.html">Accesories</a>
+          </button>
+          <section class="dropned-content">
+            <a href="accesories.html">Klokker</a>
+            <a href="accesories.html">Slips</a>
+            <a href="accesories.html">Belter</a>
+          </section>
+        </section>
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="Salg.html">Salg</a>
+          </button>
+
+        </section>
+
+
+      </section>
 
 
       <section class="denusynlig">
@@ -298,22 +295,23 @@
         <table>
           <thead>
             <tr>
-              <th>HERRE</th>
+              <th><a href="Barn.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td> <a href="index.html">FORSIDE</a>
+              <td> <a href="herre.html">Herre</a>
               </td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -325,26 +323,26 @@
         <table>
           <thead>
             <tr>
-              <th>DAMER</th>
+              <th><a href="Barn.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="index.html">FORSIDE</a></td>
+              <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
         </table>
-        <tr>
 
       </section>
 
@@ -352,25 +350,27 @@
         <table>
           <thead>
             <tr>
-              <th>BARN</th>
+              <th><a href="Barn.html">BARN</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="index.html">FORSIDE</a></td>
+              <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
         </table>
+
       </section>
 
 
