--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
@@ -85,7 +85,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Sko</a>
+          <button class="dropknapp"><a href="sko.html">Sko</a>
 
           </button>
           <section class="dropned-content">
@@ -98,19 +98,19 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Sport</a>
+          <button class="dropknapp"><a href="sport.html">Sport</a>
           </button>
           <section class="dropned-content">
-            <a href="sport.html">t-skjorte</a>
-            <a href="sport.html">Bukse</a>
-            <a href="sport.html">sko</a>
+            <a href="sport.html">Sport overdeler</a>
+            <a href="sport.html">Sport underdeler</a>
+            <a href="sport.html">Sport relatert</a>
           </section>
         </section>
 
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Accesories</a>
+          <button class="dropknapp"><a href="accesories.html">Accesories</a>
           </button>
           <section class="dropned-content">
             <a href="accesories.html">Klokker</a>
@@ -121,13 +121,9 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="herre.html">Salg</a>
+          <button class="dropknapp"><a href="Salg.html">Salg</a>
           </button>
-          <section class="dropned-content">
-            <a href="Salg.html">Gensere</a>
-            <a href="Salg.html">Bukser</a>
-            <a href="Salg.html">Jakker</a>
-          </section>
+
         </section>
 
 
@@ -228,8 +224,7 @@
 
 
 
-    <h1 class="H1">HERRE</h1>
-    <h2 class="H2">Nyheter:</h2>
+    <h1 class="H1">FOLK LIKER OGSÅ:</h1>
 
     <section class="nyheter_hoved">
 
