--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -85,7 +85,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Sko</a>
+          <button class="dropknapp"><a href="sko.html">Sko</a>
 
           </button>
           <section class="dropned-content">
@@ -98,19 +98,19 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Sport</a>
+          <button class="dropknapp"><a href="sport.html">Sport</a>
           </button>
           <section class="dropned-content">
-            <a href="sport.html">t-skjorte</a>
-            <a href="sport.html">Bukse</a>
-            <a href="sport.html">sko</a>
+            <a href="sport.html">Sport overdeler</a>
+            <a href="sport.html">Sport underdeler</a>
+            <a href="sport.html">Sport relatert</a>
           </section>
         </section>
 
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="../herre.html">Accesories</a>
+          <button class="dropknapp"><a href="accesories.html">Accesories</a>
           </button>
           <section class="dropned-content">
             <a href="accesories.html">Klokker</a>
@@ -121,13 +121,9 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="herre.html">Salg</a>
+          <button class="dropknapp"><a href="Salg.html">Salg</a>
           </button>
-          <section class="dropned-content">
-            <a href="Salg.html">Gensere</a>
-            <a href="Salg.html">Bukser</a>
-            <a href="Salg.html">Jakker</a>
-          </section>
+
         </section>
 
 
@@ -147,10 +143,10 @@
 
     <section class="under_nav">
       <section class="women_get">
-        <a href="#"> Women: get up to 60% off dresses!!</a>
+        <a href="Dame.html"> Women: get up to 60% off dresses!!</a>
       </section>
       <section class="Men_get">
-        <a href="#">Men: Get up to 60% off sweaters!!</a>
+        <a href="herre.html">Men: Get up to 60% off sweaters!!</a>
       </section>
 
 
@@ -172,34 +168,34 @@
 
 
 
-      <section class="nr1">
-        <a href="../DAMER/Dame.html"><img src="bilder/dammod.psd" alt="k" class="bilde2"></a>
+      <section class="velg_kjønn">
+        <a href="Dame.html"><img src="bilder/dammod.psd" alt="k" class="bilde2"></a>
       </section>
 
 
 
-      <section class=" nr2">
-        <a href="a HERRE/herre.html"></a>
-        <a href="a Herre/herre.html"><img src="bilder/manmod.psd" alt="" class="bilde3"></a>
+      <section class="velg_kjønn">
+
+        <a href="herre.html"><img src="bilder/manmod.psd" alt="" class="bilde3"></a>
       </section>
 
 
 
-      <section class=" nr3">
-        <a href="BARN/Barn.html"> <img src="bilder/barmod.psd" alt="" class="bilde4"></a>
+      <section class="velg_kjønn">
+        <a href="Barn.html"> <img src="bilder/barmod.psd" alt="" class="bilde4"></a>
       </section>
 
 
     </section>
 
-    <h1 class="H1">HERRE</h1>
-    <h2 class="H2">Nyheter:</h2>
+    <h1 class="H1">HERRE→ </h1>
+    <h2 class="H2">———————Nyheter———————</h2>
 
     <section class="nyheter_hoved">
 
 
       <section class="nyheter_index">
-        <div class="bilde"><img src="bilder/prosen.psd" alt=""></div>
+        <div class="bilde"> <a href="herre_klesplagg1.html"><img src="bilder/prosen.psd" class="bilde_modell" alt=""></div></a>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
         </div>
@@ -396,22 +392,23 @@
         <table>
           <thead>
             <tr>
-              <th>HERRE</th>
+              <th><a href="Barn.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td> <a href="index.html">FORSIDE</a>
+              <td> <a href="herre.html">Herre</a>
               </td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -423,26 +420,26 @@
         <table>
           <thead>
             <tr>
-              <th>DAMER</th>
+              <th><a href="Barn.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="index.html">FORSIDE</a></td>
+              <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
         </table>
-        <tr>
 
       </section>
 
@@ -450,25 +447,27 @@
         <table>
           <thead>
             <tr>
-              <th>BARN</th>
+              <th><a href="Barn.html">BARN</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="index.html">FORSIDE</a></td>
+              <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
         </table>
+
       </section>
 
 
