--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/trykk_søk.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/trykk_søk.html
@@ -206,7 +206,7 @@
 
 
       <section class="søkemotorer">
-        <a href="trykk_søk.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="å_søke.html"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -310,21 +310,20 @@
       </section>
 
 
-
       <section class="_index">
-        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
+        <div class="bilde"><img src="bilder/it dress.jpg" alt=""></div>
+        <div class="Merke">VERSACE </div>
+        <div class="navn"> dress jakke
         </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+        <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">10%</mark> </div>
       </section>
 
       <section class="_index">
-        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">strikkegenser
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
+        <div class="Merke">Napapirji </div>
+        <div class="navn">Utebukse
         </div>
-        <div class="pris"><mark class="nåpris">999 kr </mark> <mark class="førpris">169 999 </mark> <mark class="nåpris">45%</mark> </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">95%</mark> </div>
       </section>
 
       <section class="_index">
@@ -333,6 +332,14 @@
         <div class="navn"> dress jakke
         </div>
         <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">10%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
+        <div class="Merke">Napapirji </div>
+        <div class="navn">Utebukse
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">95%</mark> </div>
       </section>
 
       <section class="_index">
