--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/sport.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/sport.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HERRE-KLÆR</title>
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
